<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/round_corner_region"
    android:orientation="vertical"
    android:padding="@dimen/_10ssp">

    <LinearLayout
        android:id="@+id/ll_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/bold"
            android:text="@string/select_language"
            android:textColor="@color/text_steps"
            android:textSize="@dimen/_15ssp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"/>

    <LinearLayout
        android:id="@+id/ll_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/regular"
            android:text="@string/english_language"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_arabic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/regular"
            android:text="@string/arabic_language"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_portuguese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/regular"
            android:text="@string/portuguese_language"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_spanish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/regular"
            android:text="@string/spanish_language"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>

</LinearLayout>