<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/round_corner_white_history"
        android:elevation="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llDate"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner_history"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_date_history"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMonth"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:text="@string/text_month"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txtYear"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_year"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="normal" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/llDate">

                <LinearLayout
                    android:id="@+id/llTotalSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/txtStepCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_steps_count"
                        android:textColor="@color/text_steps"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:fontFamily="@font/regular"
                        android:text="@string/text_steps"
                        android:textColor="@color/text_steps"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llTotalSteps"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:src="@drawable/ic_shoes"
                        android:visibility="gone"
                        app:tint="@color/text_steps" />

                    <TextView
                        android:id="@+id/txt_km"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:text="@string/text_0"
                        android:textColor="@color/text_steps"
                        android:textSize="@dimen/_8ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:fontFamily="@font/regular"
                        android:text="@string/text_km"
                        android:textColor="#1f3e6f"
                        android:textSize="@dimen/_8ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:fontFamily="@font/regular"
                        android:text="+"
                        android:textColor="@color/text_easy"
                        android:textSize="@dimen/_12ssp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/txtEarnedCoin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1sdp"
                        android:fontFamily="@font/regular"
                        android:text="@string/text_erned_coin_history"
                        android:textColor="@color/text_easy"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_1sdp"
                        android:fontFamily="@font/regular"
                        android:text="@string/text_coins2"
                        android:textColor="@color/text_easy"
                        android:textSize="@dimen/_14ssp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:src="@drawable/ic_coins"
                        android:textColor="@color/text_steps"
                        android:textSize="@dimen/_15ssp" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</layout>