<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_delete_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/bold"
        android:text="@string/text_delete"
        android:textColor="@color/text_steps"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/text_delete_info"
        android:textColor="@color/text_steps"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_confirm_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        android:background="@drawable/round_confirm_delete"
        android:gravity="center"
        android:padding="@dimen/_7sdp">

        <TextView
            android:id="@+id/txt_confirm_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="@string/text_confirm_delete"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cancel_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:padding="@dimen/_7sdp">

        <TextView
            android:id="@+id/txt_cancel_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="@string/text_cancel_delete"
            android:textColor="@color/text_steps"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>